Tweak the example, finish the README

--- a/notes/20220412214502.md
+++ b/notes/20220412214502.md
@@ -1,9 +1,10 @@
 ---
 threads:
 - Bruce Wayne
-- Sherlock Holmes
 ---
 
-Batman and Sherlock Holmes met in _Detective Comics_ 572, in 1987
+Talking about Batcave maintenance. Bruce wants me to sweep the corners more often, but ... ugh.
 
-[source](https://dc.fandom.com/wiki/Detective_Comics_Vol_1_572)
+I've suggested we have Robin take over that chore, but he's "too busy practicing acrobatics" so it'll probably fall onto my shoulders in the end.
+
+Had to wrap up quickly when the red phone rang, something about giant [[balloons]] appearing downtown.
