--- a/notes/20220412214713.md
+++ b/notes/20220412214713.md
@@ -1,7 +1,1 @@
----
-threads:
-- Robert Pattinson
-- Bruce Wayne
----
-
-Robert Pattinson played Bruce Wayne in the 2022 film _The Batman_. It is a very long [[film]].
+After Bruce left for today's emergency, [[Robert Pattinson]] called asking for insight into "the great man." I had to mute the call, I was laughing so hard.
